tests/baselines/reference/contextualSignatureInstatiationCovariance(strict=true).errors.txt
contextualSignatureInstatiationCovariance.ts(1,20): error TS7008: Member 'x' implicitly has an 'any' type.
contextualSignatureInstatiationCovariance.ts(2,23): error TS7008: Member 'x2' implicitly has an 'any' type.
contextualSignatureInstatiationCovariance.ts(3,47): error TS7008: Member 'y' implicitly has an 'any' type.
contextualSignatureInstatiationCovariance.ts(8,1): error TS2322: Type '<T extends Giraffe>(x: T, y: T) => void' is not assignable to type '(a: Animal, t: TallThing) => void'.
  Types of parameters 'x' and 'a' are incompatible.
    Type 'Animal' is missing the following properties from type 'Giraffe': y, x2
contextualSignatureInstatiationCovariance.ts(8,6): error TS2454: Variable 'f2' is used before being assigned.
contextualSignatureInstatiationCovariance.ts(11,1): error TS2322: Type '<T extends Giraffe>(x: T, y: T) => void' is not assignable to type '(a1: Animal, a2: Animal) => void'.
  Types of parameters 'x' and 'a1' are incompatible.
    Type 'Animal' is not assignable to type 'Giraffe'.
contextualSignatureInstatiationCovariance.ts(11,6): error TS2454: Variable 'f2' is used before being assigned.


==== contextualSignatureInstatiationCovariance.ts (7 errors) ====
    interface Animal { x }
                       ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
    interface TallThing { x2 }
                          ~~
!!! error TS7008: Member 'x2' implicitly has an 'any' type.
    interface Giraffe extends Animal, TallThing { y }
                                                  ~
!!! error TS7008: Member 'y' implicitly has an 'any' type.
    
    var f2: <T extends Giraffe>(x: T, y: T) => void;
    
    var g2: (a: Animal, t: TallThing) => void;
    g2 = f2; // While neither Animal nor TallThing satisfy the constraint, T is at worst a Giraffe and compatible with both via covariance.
    ~~
!!! error TS2322: Type '<T extends Giraffe>(x: T, y: T) => void' is not assignable to type '(a: Animal, t: TallThing) => void'.
!!! error TS2322:   Types of parameters 'x' and 'a' are incompatible.
!!! error TS2322:     Type 'Animal' is missing the following properties from type 'Giraffe': y, x2
         ~~
!!! error TS2454: Variable 'f2' is used before being assigned.
    
    var h2: (a1: Animal, a2: Animal) => void;
    h2 = f2; // Animal does not satisfy the constraint, but T is at worst a Giraffe and compatible with Animal via covariance.
    ~~
!!! error TS2322: Type '<T extends Giraffe>(x: T, y: T) => void' is not assignable to type '(a1: Animal, a2: Animal) => void'.
!!! error TS2322:   Types of parameters 'x' and 'a1' are incompatible.
!!! error TS2322:     Type 'Animal' is not assignable to type 'Giraffe'.
         ~~
!!! error TS2454: Variable 'f2' is used before being assigned.